feat: graduate register and org-environments OpenAPI
